--- a/express-react-app/frontend/public/index.html
+++ b/express-react-app/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Simple React App</title>
+    <title>Spade Magic</title>
     <!-- <script src="https://kit.fontawesome.com/c43e99269c.js" crossorigin="anonymous"></script> -->
     <link
       rel="stylesheet"
