added tags for linkedin

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta property='og:title' content='Spade Magick'/>
+    <meta property='og:image' content='https://jborja-bucket.s3.us-west-1.amazonaws.com/images/spademagick-homepage.png'/>
+    <meta property='og:description' content='Spade Magick is a platform created for magicians, amateurs and even fans of magic. Here, magicians are able to post their creations to either show them of even post instructions and media on how to perform each illusion. All illusions are divided by categories which will allow the user to find an illusion quicker and get to enjoy the magic faster.'/>
+    <meta property='og:url' content='https://spademagick.herokuapp.com/login'/>
     <title>Spade Magic</title>
     <!-- <script src="https://kit.fontawesome.com/c43e99269c.js" crossorigin="anonymous"></script> -->
     <link
